Fixed mobile port offcenter issue

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -10,12 +10,19 @@
   box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+    width: 100%;
+}
 
 body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
+    position: relative;
 
     h4 {
         color: $darkBlue;
@@ -27,7 +34,11 @@ body {
 @media (max-width: 768px) {
     body {
         overflow-x: hidden;
+        max-width: 100vw;
     }
     
-
+    h4 {
+        font-size: 1.5rem;
+        padding: 0 1rem;
+    }
 }
